--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -22,7 +22,7 @@
 </head>
 <nav class="navbar bg-body-tertiary fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">mapa mapa mapa mapa mapa mapa </a>
+      <a class="navbar-brand" href="#"> mapa </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
