--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -20,7 +20,7 @@
         #map{height: 80vh;}
     </style>
 </head>
-<!--<nav class="navbar bg-body-tertiary fixed-top">
+<nav class="navbar bg-body-tertiary fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#"> mapa </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
@@ -62,7 +62,6 @@
       </div>
     </div>
   </nav>
--->
 <body>
     <h1>MEU MAPA 1</h1>
     <div id="map"></div>
